--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,16 @@
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.9.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
     "zod": "^3.25.64"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^24.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
