--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@prisma/adapter-pg": "^6.9.0",
+    "@prisma/client": "^6.9.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -11,6 +13,7 @@
     "express": "^5.1.0",
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.0",
     "prisma": "^6.9.0",
     "zod": "^3.25.64"
   },
