create README.md & update .gitignore + .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,7 @@
+DATABASE_URL=postgresql://<user>:<password>@<host>:<port>/<db>
 PORT=
-DATABASE_URL=
-JWT_SECRET=
-EXPIRES_IN=
+CLIENT_URL=
+
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
 
