chore(gql-tools): regenerate typeDefs and resolvers using gql-tools

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -33,6 +33,6 @@
     },
 
     // 📁 File system
-    "include"         : [ "src/**/*", "codegen.ts" ],
+    "include"         : [ "src/**/*" ],
     "exclude"         : [ "dist", "node_modules" ]
 }
