--- a/packages/server/docker-compose.yaml
+++ b/packages/server/docker-compose.yaml
@@ -8,4 +8,4 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: shop
+      POSTGRES_DB: galactic
